# confee

./: Cargo.toml  README.md
examples/: example.conf  main.rs
src/: conf.rs  lib.rs
